--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data 2</button>
+    <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadUsers2()">Load Users 2</button>
 
+    <div class="users-container">
+        <ul id="users-list">
+
+        </ul>
+    </div>
+
+    <!-- script JS -->
     <script src="js/fetch.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
